Bug 978827 - Remove bogus assertion in OpenSL input backend. r=jesup