media/webrtc/trunk/webrtc/modules/audio_device/android/opensles_input.cc
@@ -155,7 +155,6 @@ int32_t OpenSlesInput::RecordingIsAvailable(bool& available) {  // NOLINT
 
 int32_t OpenSlesInput::InitRecording() {
   assert(initialized_);
-  assert(!rec_initialized_);
   rec_initialized_ = true;
   return 0;
 }
